# virkastir-bot

./: .gitignore  README.md  pyproject.toml  twitter_bot.py
utils/: fb_scraper.py  scrape_config.json
