[tool.poetry]
name = "facebook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
facebook-scraper = "^0.2.55"
jupyter = "^1.0.0"
black = "^22.3.0"
tweepy = "^4.9.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
